...

    var image: Image? {
        Image(systemName: "plus.app")
    }

    var actions: [Action] {
        Action(id: "dismiss", title: "Got It")
    }

    // Show after 3 calculations
    @Parameter
    static var calculationCount: Int = 0

...
